# django-hcaptcha

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: publish_package.yml  run_linters.yml  run_python_unit_tests.yml
hcaptcha/: apps.py  fields.py  widgets.py
hcaptcha_field/: __init__.py  apps.py  fields.py  settings.py  widgets.py
hcaptcha_field/locale/da/LC_MESSAGES/: django.mo  django.po
hcaptcha_field/locale/de/LC_MESSAGES/: django.mo  django.po
hcaptcha_field/locale/fr/LC_MESSAGES/: django.mo  django.po
hcaptcha_field/locale/nl/LC_MESSAGES/: django.mo  django.po
hcaptcha_field/locale/nl_BE/LC_MESSAGES/: django.mo  django.po
hcaptcha_field/locale/pl/LC_MESSAGES/: django.mo  django.po
hcaptcha_field/templates/: hcaptcha_widget.html
py_tests/: conftest.py  test_fields.py  test_settings.py  test_widgets.py
py_tests/django_test_project/: settings.py
