[metadata]
name = django-hCaptcha-field
version = 0.1.0
description = Django hCaptcha Field provides a simple way to protect your Django forms using hCaptcha.
long_description = file: README.rst
url = https://github.com/tiesjan/django-hcaptcha-field
author = Ties Jan Hefting
author_email = hello@tiesjan.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
